# WeChatDataAnalysis

./: .gitignore  README.md  main.py  pyproject.toml
desktop/: package-lock.json  package.json
desktop/scripts/: installer-custom.nsh
desktop/src/: main.cjs
frontend/: app.vue  pnpm-lock.yaml
frontend/assets/css/: tailwind.css
frontend/components/: ApiStatus.vue  ChatLocationCard.vue  EditedMessagePreview.vue  SettingsDialog.vue
frontend/composables/: useApi.js  useWrappedTheme.js
frontend/pages/: chat.vue  contacts.vue  decrypt.vue  detection-result.vue  index.vue  settings.vue  sns.vue
frontend/pages/chat/: [[username]].vue
frontend/utils/: desktop-settings.js
src/wechat_decrypt_tool/: __init__.py  api.py  chat_export_service.py  chat_helpers.py  isaac64.py  key_service.py  media_helpers.py  network_access.py  sns_export_service.py  wcdb_realtime.py
tests/: test_avatar_cache_chat_media.py  test_chat_export_chat_history_modal.py  test_chat_export_html_format.py  test_chat_export_message_types_semantics.py  test_chat_list_messages_re_scope.py  test_contact_type_detection.py  test_contacts_export.py  test_mcp_access_host.py  test_mcp_router.py  test_parse_app_message.py
tools/: debug_message_types.py  extract_media_keys.py  test_image_api.py  weflow_wasm_keystream.js
tools/key_wheels/: README.md  wx_key-1.1.0-cp310-cp310-win_amd64.whl  wx_key-1.1.0-cp311-cp311-win_amd64.whl  wx_key-1.1.0-cp312-cp312-win_amd64.whl  wx_key-1.1.0-cp313-cp313-win_amd64.whl  wx_key-1.1.0-cp314-cp314-win_amd64.whl
tools/native/: README.md
(+41 files in other folders)
