[project]
name = "wechat-decrypt-tool"
version = "0.1.0"
description = "Modern WeChat database decryption tool with React frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=41.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pathlib>=1.0.1",
    "typing-extensions>=4.8.0",
    "pywin32>=310",
    "psutil>=7.0.0",
    "pycryptodome>=3.23.0",
    "requests>=2.32.4",
    "loguru>=0.7.0",
    "zstandard>=0.23.0",
    "pymem>=1.14.0",
    "yara-python>=4.5.4",
    "pilk>=0.2.4",
]

[project.scripts]
wechat-decrypt = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_decrypt_tool"]
